fixed youtube-link header so it isn't squashed vertically and fixed so reviews are displayed on an unstyled list

--- a/src/app/movie-detail/movie-detail.component.css
+++ b/src/app/movie-detail/movie-detail.component.css
@@ -16,7 +16,6 @@
 }
 .box-card-textbox {
 	margin:0;
-	height:30px;
 	background-color:#333;
 	text-align:center;
 	width:200px;
